Temp resolved image off center bug in mid section
Vertical flexboxes in mid section depend are hard-coded values to match
the width of the images in the section. Once the skeleton of the site
is laid out, this needs to be revisted. Flex grow/shrink using the
keyword 'auto' comes to mind right now. But this will need to be looked
at in the future.

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,8 @@ h2 {
 .rand-info .block4 {
     display: flex;
     flex-direction: column;
-    width: 165px;
+    width: 180px;
+    /* Flex width needs to be same size as image width */
 }
 
 .rand-info {
